--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,29 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgres
   pool: 5
   timeout: 5000
+  username: postgres
+  password: postgres
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: eshopper-devlopment
+  username: postgres
+  password: postgres
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: eshopper-test
+  username: postgres
+  password: postgres
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: eshopper-production
+  username: postgres
+  password: postgres
